# AgeOfTrashcan

./: .gitignore  AGENTS.md  AI_ARCHITECTURE.md  AI_SPEC.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
assets/base/: README.md
assets/manapool/: README.md
assets/tower/: README.md
docs/: ASSET_SYSTEM.md  ML_SELFPLAY_IMPLEMENTATION_SPEC.md  ML_SELFPLAY_ROADMAP.md
ml/: README.md  pyproject.toml  train_selfplay.py
ml/schemas/: action_schema.json  observation_schema.json  transition_schema.json
ml/selfplay/: __init__.py  config.py  env.py  league.py  model.py  ppo.py  schemas.py  trainer.py
scripts/: turret_balance_report.mjs
src/: App.tsx  GameEngine.ts  index.css
src/ai/: AIBehavior.ts  AIController.ts  README_AI_INTERFACE.md
src/ai/behaviors/: BalancedAI.ts  MLSelfPlayBehavior.ts  SmartPlannerAI.ts  index.ts
src/ai/endpoints/: IAIEndpoint.ts  index.ts
src/ai/ml/: actionCatalog.ts  historyBuffer.ts  index.ts  legalActionMask.ts  observationEncoder.ts  policy.ts
src/config/: aiConfig.ts  gameBalance.ts  renderConfig.ts  turretConfig.ts  turrets.ts  units.ts
src/core/: CoreLoop.ts  PRNG.ts  World.ts
src/systems/: CombatUtils.ts  EconomySystem.ts  EntitySystem.ts  ProjectileSystem.ts  RenderSystem.ts  SkillSystem.ts  TurretSystem.ts  VfxSystem.ts
src/ui/: GameOverOverlay.tsx  StartScreen.tsx  UnitTrainingPanel.tsx  uiEmotes.ts  unitDisplay.tsx
