[project]
name = "age-of-trashcan-selfplay"
version = "0.1.0"
description = "PPO self-play trainer for Age of Trashcan SMART_ML policy path"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26.0",
  "torch>=2.3.0",
  "typing-extensions>=4.10.0"
]

[project.scripts]
train-selfplay = "train_selfplay:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["selfplay*"]
